--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
@@ -1,13 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString"
-            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString1"
-            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
+        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString1" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
