--- a/0_QuanLyHocVien/O2S_QuanLyHocVien/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien/app.config
@@ -1,26 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="O2S_QuanLyHocVien.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="O2S_QuanLyHocVien.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
+  <log4net debug="true">
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="Logs\LogSystem.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
+      <encoding value="utf-8"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="RollingLogFileAppender"/>
+    </root>
+  </log4net>
   <connectionStrings>
-    <add name="O2S_QuanLyHocVien.Properties.Settings.QLHVTTECConnectionString"
-        connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True"
-        providerName="System.Data.SqlClient" />
+    <add name="O2S_QuanLyHocVien.Properties.Settings.QLHVTTECConnectionString" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <userSettings>
     <O2S_QuanLyHocVien.Properties.Settings>
       <setting name="Login_UserName" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Login_Password" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="Login_IsSaved" serializeAs="String">
         <value>True</value>
       </setting>
     </O2S_QuanLyHocVien.Properties.Settings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
