--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -67,6 +70,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="QuyDinh.cs" />
+    <Compile Include="License.cs" />
+    <Compile Include="Version.cs" />
     <Compile Include="TaiKhoan.cs" />
   </ItemGroup>
   <ItemGroup>
