--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/Properties/Settings.settings
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DataAccess.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="O2S_QuanLyHocVien.DataAccess.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="QLHVTTECConnectionString" Type="(Connection string)" Scope="Application">
@@ -17,6 +17,14 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True</Value>
+    </Setting>
+    <Setting Name="QLHVTTECConnectionString2" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Persist Security Info=True;User ID=sa&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Persist Security Info=True;User ID=sa</Value>
     </Setting>
   </Settings>
 </SettingsFile>
