--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.DataAccess/app.config
@@ -3,7 +3,20 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True" providerName="System.Data.SqlClient"/>
-        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString1" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString"
+            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="DataAccess.Properties.Settings.QLHVTTECConnectionString1"
+            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="O2S_QuanLyHocVien.DataAccess.Properties.Settings.QLHVTTECConnectionString"
+            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="O2S_QuanLyHocVien.DataAccess.Properties.Settings.QLHVTTECConnectionString1"
+            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="O2S_QuanLyHocVien.DataAccess.Properties.Settings.QLHVTTECConnectionString2"
+            connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
