--- a/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/AppSettings.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVienLauncher/AppSettings.config
@@ -1,16 +1,9 @@
 ﻿<appSettings>
   <add key="skin" value="" />
-  <add key="conStr" value="Server=localhost;User Id=postgres;Password=1234;Database=test;" />
-  <add key="ServerHost" value="wHTH8UEtpJ8DB2dSFCJlWQ==" />
-  <add key="ServerPort" value="x2MWpTKER2A=" />
-  <add key="Username" value="X/wuKluTVg2Z6cqR1FXIJQ==" />
-  <add key="Password" value="VbrmL6qGNvI=" />
-  <add key="Database" value="HBSHbUsxLqZNT9jemFTnXw==" />
-  <add key="ServerHost_HSBA" value="wHTH8UEtpJ8DB2dSFCJlWQ==" />
-  <add key="ServerPort_HSBA" value="x2MWpTKER2A=" />
-  <add key="Username_HSBA" value="X/wuKluTVg2Z6cqR1FXIJQ==" />
-  <add key="Password_HSBA" value="VbrmL6qGNvI=" />
-  <add key="Database_HSBA" value="3+lf08VqQYDxINFKkAj0yw==" />
+  <add key="ServerHost" value="ynGG1EfwNU21pgD1KUcFHYJQRfyKeSqt" />
+  <add key="Username" value="SfsMjcenJ68=" />
+  <add key="Password" value="Wfcy3r2UVFE=" />
+  <add key="Database" value="Cjugjxvn1vHb4ZiEsLsVYu+YTUTXeGC5" />
   <add key="checkEditNhoPass" value="True" />
   <add key="LoginUser" value="KgyxW9jqNcc=" />
   <add key="LoginPassword" value="E36w19IK+gaPIT7K1d/6sw==" />
