--- a/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien.BusinessLogic/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <BusinessLogic.Properties.Settings>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True</value>
+                <value>Data Source=ADMIN\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True</value>
             </setting>
             <setting name="Database_ServerName" serializeAs="String">
                 <value/>
