--- a/0_QuanLyHocVien/O2S_QuanLyHocVien/app.config
+++ b/0_QuanLyHocVien/O2S_QuanLyHocVien/app.config
@@ -26,7 +26,7 @@
   </log4net>
   <appSettings configSource="AppSettings.config"></appSettings>
   <connectionStrings>
-    <add name="O2S_QuanLyHocVien.Properties.Settings.QLHVTTECConnectionString" connectionString="Data Source=HONGNHAT_DEV\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="O2S_QuanLyHocVien.Properties.Settings.QLHVTTECConnectionString" connectionString="Data Source=ADMIN\SQLEXPRESS;Initial Catalog=QLHVTTEC;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <userSettings>
     <O2S_QuanLyHocVien.Properties.Settings>
